Fixing letter weight on iphone 5s

--- a/assets/css/blocks.css
+++ b/assets/css/blocks.css
@@ -164,9 +164,9 @@
   color: #697e90;
   letter-spacing: 1px;
 }
-@media only screen and (max-width:320px) { 
+@media only screen and (max-width:321px) { 
   .promo-text-v2 {
-    font-size: 28px;
+    font-size: 29px;
     font-weight: 600;
     line-height: 33px;
     color: #697e90;
